--- a/flashing-adafruit-32u4-boards-en.html
+++ b/flashing-adafruit-32u4-boards-en.html
@@ -102,6 +102,7 @@ AVRISP-MKII programmer. Here are some notes with steps and the needed files.</p>
                             
                             <li><a href="http://github.com/tytouf">github</a></li>
                             <li><a href="http://twitter.com/tytouf">twitter</a></li>
+                            <li><a href="http://stackoverflow.com/users/2637585/christophe-augier">stackoverflow</a></li>
                             <li><a href="http://www.linkedin.com/pub/christophe-augier/1/562/660">linkedin</a></li>
                         </ul>
                 </div><!-- /.social -->
