--- a/open-data-traffic-accident-en.html
+++ b/open-data-traffic-accident-en.html
@@ -57,7 +57,7 @@ I found some interesting dataset related to traffic accident and decided to work
 on a map to display the localization of the accidents. I developed a python
 script to extract the data from the ODS files and format them  so that I can
 display them on a map rendered using <a href="http://leaflet.cloudmade.com">Leaflet</a>. More details (sorry in French) and
-the map <a href="http://opendata.tytouf.fr">here</a>, the tools are licensed under the <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons</a>.</p>
+the map <a href="http://tytouf.github.io/traffic-accident-map">here</a>, the tools are licensed under the <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons</a>.</p>
     </div><!-- /.entry-content -->
 
   </article>
@@ -75,6 +75,7 @@ the map <a href="http://opendata.tytouf.fr">here</a>, the tools are licensed und
                             
                             <li><a href="http://github.com/tytouf">github</a></li>
                             <li><a href="http://twitter.com/tytouf">twitter</a></li>
+                            <li><a href="http://stackoverflow.com/users/2637585/christophe-augier">stackoverflow</a></li>
                             <li><a href="http://www.linkedin.com/pub/christophe-augier/1/562/660">linkedin</a></li>
                         </ul>
                 </div><!-- /.social -->
